# cmake_scripts

./: DEBUG_TOOLS.cmake  FATFS.cmake  LOGGER.cmake  MCU_Platform_init.cmake  app.cmake  backup_cmakelist.sh  install_cmakelist.sh  rtos.cmake  stm32f7.cmake  stm32l4.cmake
project_template_CMakelists/: CMakeLists.txt
project_template_CMakelists/Core/: CMakeLists.txt
project_template_CMakelists/Drivers/: CMakeLists.txt  Drivers.c  README.md
project_template_CMakelists/Drivers/CMSIS/: CMakeLists.txt
project_template_CMakelists/Drivers/STM32F7xx_HAL_Driver/: CMakeLists.txt
project_template_CMakelists/Drivers/STM32L4xx_HAL_Driver/: CMakeLists.txt
project_template_CMakelists/FATFS/: CMakeLists.txt
project_template_CMakelists/FATFS/App/: CMakeLists.txt
project_template_CMakelists/Inc/: README.md
project_template_CMakelists/Middlewares/: CMakeLists.txt  Middlewares.c  README.md
project_template_CMakelists/Middlewares/segger/: CMakeLists.txt
project_template_CMakelists/Src/: README.md
