set(STM32F7xx_HAL_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(STM32F7xx_HAL_INC ${CMAKE_CURRENT_SOURCE_DIR}/Inc)
set(STM32F7xx_HAL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Src)
add_library(STM32F7xx_HAL_Driver 
    #header
    ${STM32F7xx_HAL_INC}/stm32_assert_template.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_adc.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_adc_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_can.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_cec.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_conf_template.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_cortex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_crc.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_crc_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_cryp.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_cryp_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_dac.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_dac_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_dcmi.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_dcmi_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_def.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_dfsdm.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_dma.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_dma2d.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_dma_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_dsi.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_eth.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_exti.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_flash.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_flash_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_gpio.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_gpio_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_hash.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_hash_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_hcd.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_i2c.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_i2c_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_i2s.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_irda.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_irda_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_iwdg.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_jpeg.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_lptim.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_ltdc.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_ltdc_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_mdios.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_mmc.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_nand.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_nor.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_pcd.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_pcd_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_pwr.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_pwr_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_qspi.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_rcc.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_rcc_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_rng.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_rtc.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_rtc_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_sai.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_sai_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_sd.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_sdram.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_smartcard.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_smartcard_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_smbus.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_spdifrx.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_spi.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_spi_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_sram.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_tim.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_tim_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_uart.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_uart_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_usart.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_usart_ex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_hal_wwdg.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_adc.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_bus.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_cortex.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_crc.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_dac.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_dma.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_dma2d.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_exti.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_fmc.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_gpio.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_i2c.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_iwdg.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_lptim.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_pwr.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_rcc.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_rng.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_rtc.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_sdmmc.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_spi.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_system.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_tim.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_usart.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_usb.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_utils.h
    ${STM32F7xx_HAL_INC}/stm32f7xx_ll_wwdg.h

    #source
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_adc.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_adc_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_can.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_cec.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_cortex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_crc.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_crc_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_cryp.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_cryp_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_dac.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_dac_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_dcmi.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_dcmi_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_dfsdm.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_dma.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_dma2d.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_dma_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_dsi.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_eth.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_exti.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_flash.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_flash_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_gpio.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_hash.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_hash_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_hcd.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_i2c.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_i2c_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_i2s.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_irda.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_iwdg.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_jpeg.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_lptim.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_ltdc.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_ltdc_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_mdios.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_mmc.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_msp_template.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_nand.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_nor.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_pcd.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_pcd_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_pwr.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_pwr_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_qspi.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_rcc.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_rcc_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_rng.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_rtc.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_rtc_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_sai.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_sai_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_sd.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_sdram.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_smartcard.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_smartcard_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_smbus.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_spdifrx.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_spi.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_spi_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_sram.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_tim.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_tim_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_timebase_rtc_alarm_template.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_timebase_rtc_wakeup_template.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_timebase_tim_template.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_uart.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_uart_ex.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_usart.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_hal_wwdg.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_adc.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_crc.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_dac.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_dma.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_dma2d.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_exti.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_fmc.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_gpio.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_i2c.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_lptim.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_pwr.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_rcc.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_rng.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_rtc.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_sdmmc.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_spi.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_tim.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_usart.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_usb.c
    ${STM32F7xx_HAL_SRC}/stm32f7xx_ll_utils.c
    )

target_include_directories(STM32F7xx_HAL_Driver PUBLIC
    ${STM32F7xx_HAL_INC}
    ${PROJECT_SOURCE_DIR}/Core/Inc # stm32f7xx_hal_conf.h location
    )

target_link_libraries(STM32F7xx_HAL_Driver CMSIS)
