set(STM32L4xx_HAL_INC ${CMAKE_CURRENT_SOURCE_DIR}/Inc)
set(STM32L4xx_HAL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/Src)
add_library(STM32L4xx_HAL_Driver 
    #header
    #${STM32L4xx_HAL_INC}/stm32_assert_template.h # not used
    ${STM32L4xx_HAL_INC}/Legacy/stm32_hal_legacy.h
    ${STM32L4xx_HAL_INC}/Legacy/stm32l4xx_hal_can_legacy.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_adc.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_adc_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_can.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_comp.h
    #${STM32L4xx_HAL_INC}/stm32l4xx_hal_conf_template.h # not used
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_cortex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_crc.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_crc_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_cryp.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_cryp_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_dac.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_dac_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_dcmi.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_def.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_dfsdm.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_dfsdm_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_dma.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_dma2d.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_dma_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_dsi.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_exti.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_firewall.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_flash.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_flash_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_flash_ramfunc.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_gfxmmu.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_gpio.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_gpio_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_hash.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_hash_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_hcd.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_i2c.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_i2c_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_irda.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_irda_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_iwdg.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_lcd.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_lptim.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_ltdc.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_ltdc_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_mmc.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_mmc_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_nand.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_nor.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_opamp.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_opamp_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_ospi.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_pcd.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_pcd_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_pka.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_pssi.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_pwr.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_pwr_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_qspi.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_rcc.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_rcc_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_rng.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_rng_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_rtc.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_rtc_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_sai.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_sai_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_sd.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_sd_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_smartcard.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_smartcard_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_smbus.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_spi.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_spi_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_sram.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_swpmi.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_tim.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_tim_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_tsc.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_uart.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_uart_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_usart.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_usart_ex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_hal_wwdg.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_adc.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_bus.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_comp.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_cortex.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_crc.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_crs.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_dac.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_dma.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_dma2d.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_dmamux.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_exti.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_fmc.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_gpio.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_i2c.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_iwdg.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_lptim.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_lpuart.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_opamp.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_pka.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_pwr.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_rcc.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_rng.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_rtc.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_sdmmc.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_spi.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_swpmi.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_system.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_tim.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_usart.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_usb.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_utils.h
    ${STM32L4xx_HAL_INC}/stm32l4xx_ll_wwdg.h

    #source
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_adc.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_adc_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_can.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_comp.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_cortex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_crc.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_crc_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_cryp.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_cryp_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_dac.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_dac_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_dcmi.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_dfsdm.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_dfsdm_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_dma.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_dma2d.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_dma_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_dsi.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_exti.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_firewall.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_flash.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_flash_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_flash_ramfunc.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_gfxmmu.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_gpio.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_hash.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_hash_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_hcd.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_i2c.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_i2c_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_irda.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_iwdg.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_lcd.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_lptim.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_ltdc.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_ltdc_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_mmc.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_mmc_ex.c
    #${STM32L4xx_HAL_SRC}/stm32l4xx_hal_msp_template.c # not used
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_nand.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_nor.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_opamp.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_opamp_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_ospi.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_pcd.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_pcd_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_pka.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_pssi.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_pwr.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_pwr_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_qspi.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_rcc.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_rcc_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_rng.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_rng_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_rtc.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_rtc_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_sai.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_sai_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_sd.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_sd_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_smartcard.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_smartcard_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_smbus.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_spi.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_spi_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_sram.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_swpmi.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_tim.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_tim_ex.c
    #${STM32L4xx_HAL_SRC}/stm32l4xx_hal_timebase_tim_template.c # not used
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_tsc.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_uart.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_uart_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_usart.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_usart_ex.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_hal_wwdg.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_adc.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_comp.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_crc.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_crs.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_dac.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_dma.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_dma2d.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_exti.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_fmc.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_gpio.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_i2c.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_lptim.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_lpuart.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_opamp.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_pka.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_pwr.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_rcc.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_rng.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_rtc.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_sdmmc.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_spi.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_swpmi.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_tim.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_usart.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_usb.c
    ${STM32L4xx_HAL_SRC}/stm32l4xx_ll_utils.c
    )

target_include_directories(STM32L4xx_HAL_Driver PUBLIC
    ${STM32L4xx_HAL_INC}
    ${PROJECT_SOURCE_DIR}/Inc # stm32l4xx_hal_conf.h location
    )

target_link_libraries(STM32L4xx_HAL_Driver CMSIS)
